--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -30,3 +30,6 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+collect_backend_code.py
+backend_core_combined.txt
