--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -31,5 +31,6 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-collect_backend_code.py
-backend_core_combined.txt
+be_collect.py
+be_combined.txt
+README_DEV.md
